# StockFinder

./: .gitignore  LICENSE  TELEGRAM_SETUP.md  calc_rsi_sar_screening.py  pyproject.toml  pytest.ini  requirements.txt  test_macd.py  test_market_analysis.py  test_rsi_compare.py  test_sar.py  test_telegram.py  troubleshooting.md
src/config/: settings.py
src/data/: base_crawler.py  collector.py  investing_crawler.py  monitor.py  preprocess.py
src/filters/: __init__.py  base.py  industry.py  market_cap.py  pe_ratio.py
src/notifier/: scheduler.py  telegram_bot.py
src/web/: main.py
src/web/static/css/: style.css
src/web/static/js/: main.js  results.js  screening.js  settings.js
src/web/templates/: index.html  results.html  screening.html  settings.html  stocks.html
tests/data/: test_collector.py
